# src/routes/api.ts
@@ -24,8 +24,76 @@ router.post("/auth/activation", authController.activation);
 // Order
 router.post(
   "/orders",
-  [authMiddleware, aclMiddleware([ROLES.MEMBER, ROLES.ADMIN])],
+  [authMiddleware, aclMiddleware([ROLES.MEMBER])],
   orderController.create
+  /*
+  #swagger.tags = ['Orders']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+
+  #swagger.requestBody = {
+    required: true,
+    schema: {
+      $ref: "#/components/schemas/CreateOrderRequest"
+    }
+  }
+  */
+);
+router.get(
+  "/orders",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.findAll
+  /*
+  #swagger.tags = ['Orders']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
+);
+router.get(
+  "/orders/:orderId",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])],
+  orderController.findOne
+  /*
+  #swagger.tags = ['Orders']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
+);
+router.put(
+  "/orders/:orderId/completed",
+  [authMiddleware, aclMiddleware([ROLES.MEMBER])],
+  orderController.complete
+  /*
+  #swagger.tags = ['Orders']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
+);
+router.put(
+  "/orders/:orderId/pending",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.pending
+  /*
+  #swagger.tags = ['Orders']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
+);
+router.put(
+  "/orders/:orderId/cancelled",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.cancelled
+  /*
+  #swagger.tags = ['Orders']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
 );
 
 // Banner
